Fixed the footer where the copy right would be cut off the screen and commented out a tag on the main style sheet

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,7 +14,7 @@ header {
     background-color: #ffffff; 
     margin-left: 10%;
     margin-right: 10%;
-    margin-bottom: 5%;
+    /* margin-bottom: 5%; */
 }
 
 nav {
@@ -51,7 +51,8 @@ section {
     margin-left: 10%;
     margin-right: 10%;
     background-color: #ffffff;
-    margin-bottom: 50px;
+    margin-top: 50px;
+    margin-bottom: 10%; 
 }
 
 /* title for h2, about me */
@@ -95,7 +96,7 @@ img {
     position: fixed;
     bottom: 0;
     width: 100%;
-    height: 20px;
+    /* height: 20px; */
     text-align: center;
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
     color: #dddddd;
